change errordetail viwed

--- a/templates/error_detail.html
+++ b/templates/error_detail.html
@@ -2,7 +2,7 @@
 
 {% block title %}{{ error.title }} – Centro de Ayuda Tecopos{% endblock %}
 
-{{% block hero %}
+{% block hero %}
 <div class="error-header-clean">
     <div class="error-header-main">
         <div>
